RESOLVED FIXED201022
Fix infinite recursion in WTFCrashWithInfo() after r248930.
https://bugs.webkit.org/show_bug.cgi?id=201022
Summary Fix infinite recursion in WTFCrashWithInfo() after r248930.
Mark Lam
Reported 2019-08-21 19:39:36 PDT
Oops!!!
Attachments
proposed patch. (13.75 KB, patch)
2019-08-21 19:41 PDT, Mark Lam
saam: review+
Mark Lam
Comment 1 2019-08-21 19:41:07 PDT
Created attachment 376968 [details] proposed patch.
Mark Lam
Comment 2 2019-08-21 19:44:26 PDT
Thanks for the review. Landed in r248992: <http://trac.webkit.org/r248992>.
Radar WebKit Bug Importer
Comment 3 2019-08-21 19:45:38 PDT
Note You need to log in before you can comment on or make changes to this bug.