Fix infinite recursion in WTFCrashWithInfo() after r248930. https://bugs.webkit.org/show_bug.cgi?id=201022

Reviewed by Saam Barati.

* wtf/Assertions.cpp:
(WTFCrashWithInfoImpl):
(WTFCrashWithInfo): Deleted.
* wtf/Assertions.h:
(WTFCrashWithInfo):



Canonical link: https://commits.webkit.org/214730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248992 268f45cc-cd09-0410-ab3c-d52691b4dbfc